# FrankMD

./: .gitignore  .pylintrc  README.md  fi.sevonj.FrankMD.json  meson.build  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
data/: fi.sevonj.FrankMD.desktop.in  fi.sevonj.FrankMD.gschema.xml  fi.sevonj.FrankMD.metainfo.xml.in  meson.build
data/icons/: meson.build
frankmd/: frankmd.in  main.py  meson.build
frankmd/app/: app_state.py  meson.build  project.py  sheet.py
frankmd/resources/: frankmd.gresource.xml  library_view.ui  md_editor.ui  meson.build  sheet_button.ui  sheets_view.ui  style.css  window.ui
frankmd/widgets/: library_view.py  md_editor.py  meson.build  sheets_view.py  window.py
po/: POTFILES  meson.build
tests/: test_app_state.py  test_project.py
tests/example_content/project_a/: sheet1.md
tests/example_content/project_a/subdir2/: .placeholder
tests/example_content/project_b/: sheet2.md  sheet3.md
