[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.5.0"]

[project]
name = "FrankMD"
dynamic = ["version"]
license = { file = "COPYING" }

requires-python = ">=3.12"
dependencies = []
readme = "README.md"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
exclude = ["tests"]
